p2_jinam/manifests/default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-default
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  ingressClassName: traefik
  defaultBackend:
    service:
      name: app3-service
      port:
        number: 80
